--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 body {
     font-family: 'Lato', sans-serif;
 }
+
+.header {
+    background-image: url(./image/donation10.jpg);
+    width: 100%;
+    height: 500px;
+    background-repeat: no-repeat;
+}
