--- a/style.css
+++ b/style.css
@@ -3,8 +3,31 @@ body {
 }
 
 .header {
-    background-image: url(./image/donation10.jpg);
+    background-image: url(./image/donation8.jpg);
     width: 100%;
     height: 500px;
     background-repeat: no-repeat;
+    margin-left: 8px;
+}
+
+.heading {
+    text-align: center;
+    padding-top: 5px;
+}
+
+.heading h1 {
+    font-size: 60px;
+    color: #e1ef10;
+}
+
+.heading p {
+    margin: 10px 150px;
+    color: hwb(0deg 63% 27%);
+}
+
+.donate-now {
+    text-decoration: none;
+    background-color: lightcoral;
+    padding: 10px 5px;
+    border-radius: 20px;
 }
