--- a/style.css
+++ b/style.css
@@ -31,3 +31,29 @@ body {
     padding: 10px 5px;
     border-radius: 20px;
 }
+
+.donate-today {
+    text-align: center;
+}
+
+.donate-today h1 {
+    font-size: 50px;
+}
+
+.flex {
+    display: flex;
+    text-align: center;
+    margin-left: 100px;
+}
+
+.color {
+    color: indianred;
+    border: 2px solid;
+}
+
+#box {
+    box-shadow: 40px 50px 150px #e9e1e1;
+    padding-left: 5px;
+    padding-right: 5px;
+    margin-right: 60px;
+}
