--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
 
 .donate-today {
     text-align: center;
+    padding-top: 100px;
 }
 
 .donate-today h1 {
@@ -56,4 +57,61 @@ body {
     padding-left: 5px;
     padding-right: 5px;
     margin-right: 60px;
+}
+
+hr {
+    margin-left: 300px;
+    margin-right: 300px;
+}
+
+.donate {
+    text-decoration: none;
+    background-color: rgb(146, 74, 74);
+    padding: 10px 5px;
+    border-radius: 20px;
+}
+
+.donation-plan {
+    text-align: center;
+    margin-top: 100px;
+}
+
+.peragraph {
+    margin-left: 300px;
+    margin-right: 300px;
+}
+
+.donation-plan h1 {
+    font-size: 50px;
+}
+
+.display-flex {
+    display: flex;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+#display {
+    box-shadow: 40px 50px 150px #e9e1e1;
+    width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-right: 56px;
+    margin-left: 25px;
+}
+
+.first-box {
+    background-color: rgba(167, 153, 255, 0.418);
+}
+
+.second-box {
+    background-color: rgba(243, 135, 98, 0.397);
+}
+
+
+footer {
+    background-color: black;
+    text-align: center;
+    padding-top: 1px;
+    padding-bottom: 10px;
 }
